Added content to the thesis doc. The Tablet software is almost ready. It would be a nice idea to allow the user change from the tablet the ips and ports where it tries to connect.

--- a/Doc Final/2.2-prior_work.tex
+++ b/Doc Final/2.2-prior_work.tex
@@ -12,6 +12,6 @@ The work by {\em Duval et al.} \cite{Duval} works the possibilities around colla
 
 The work on annotating and sketching on 3D models via a web interface developed by {\em Jung et al.} \cite{Jung} draws interesting lines between the needs behind a post-it metaphor driven annotation system and a more free 3D sketching system. It also raises interesting points around the possible advantages of an asynchronous collaborative system and it's support for a more semantic history of the evolution of the model, versus a real-time voice based discussion system.
 
-The Chameleon System featured in \cite{3DUI} and explained deeply in \cite{Tsang} explores a similar window metaphore to the one used in this project to allow the user to select his objects of interest to associate to an annotation. However, there are important differences between their work and the one presented in this project, being the most important that the tablet used here is not attached to a mechanical arm to track the movement. Instead it uses an infrared tracking system.
+The Chameleon System featured in \cite{3DUI} and explained deeply in \cite{Tsang} explores a similar window metaphor to the one used in this project to allow the user to select his objects of interest to associate to an annotation. However, there are important differences between their work and the one presented in this project, being the most important that the tablet used here is not attached to a mechanical arm to track the movement. Instead it uses an infrared tracking system.
 
 Other sources consulted did not work as prior work but as excellent references for a more specific part of the project. The work by {\em Gonçalves et al.} in their software Tag Around \cite{Goncalves}, concerned with correct tagging and metadata enriching of photos, proposes an interesting approach to usability tests focused in non conventional interaction. The work by {\em Burton et al.}\cite{Burton} and by {\em Bernheim et al.}\cite{Bernheim} presents a really insightful conclusion around collaborative annotation systems, which as summarized in \cite{Jung} should ``be unobtrusive but accessible, inform without overwhelming, separate higher and lower priority information for different actors at different times'', even when their work concerns the annotation of ext documents the principles are extrapolable.
