--- a/Doc Final/ideas.tex
+++ b/Doc Final/ideas.tex
@@ -20,6 +20,11 @@ Decisiones de diseño de la UX.
 
 Encontrar referencia de como limitar las posibildades del usuario puede mejorar la interacción y la experiencia. Relacionado con la cantidad de caracteres usados en las anotaciones -> Principio de pareto->100 Design principles
 
+
+Future work:
+	The automatization of the configuration stage.
+
+
 Posibles referencias?
 
 Usabilidad:
@@ -43,3 +48,10 @@ Ideas sueltas:
 	La navegacion debe estar escalada al tamaño del zoom utilizado. Ej: Si en zoom x1 se mueve 50mts en x0.1 se debe mover 5.
 	Cuando se quieran revisar las anotaciones ir al mismo punto exacto desde el cual se tomo la foto
 	Quitar cosas del medio cuando ocluyen otras? Revisar Sonnet.
+	
+	
+	
+UI Sketches:
+http://www.linowski.ca/sketching Interactive Sketching Notation by Jakub Linowski is licensed under a Creative Commons Attribution-Share Alike 2.5 Canada License.
+
+GestureS: http://gesturecons.com/#android http://creativecommons.org/licenses/by-nc/3.0/
