--- a/Doc Final/thesis.tex
+++ b/Doc Final/thesis.tex
@@ -4,6 +4,8 @@
 \usepackage{graphicx}
 \usepackage{phdthesis}
 \usepackage{title_page_pacho}
+\usepackage{multirow}
+\usepackage[final]{pdfpages}
 
 \linespread{1.3}
 
@@ -26,4 +28,5 @@
 \input{7-conclusions.tex}
 \bibliographystyle{acm}
 \bibliography{thesis}
+
 \end{document}
